# CS202-Game-Programming-Project

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  debugBuildAndRun.bat  doxygenConfig.txt  releaseBuildAndRun.bat
content/enemy/: basic.json
content/font/: buttonFonts.json
content/level/: example.json
content/style/: button.json
content/texture/: enemyTexture.json  towerTexture.json
content/tower/: rifle.json
docs/: EntitySystem.md  EntitySystemRefactoring.md  FolderStructure.md  architecture.md  uml.txt
docs/html/: _application_8hpp.html  _application_8hpp_source.html  _attacking_state_8hpp_source.html  _blank_scene_8hpp.html  _blank_scene_8hpp.js  _blank_scene_8hpp_source.html  _constants_8hpp.html  _constants_8hpp_source.html  _cooldown_8hpp_source.html  _damageable_8hpp.html  _damageable_8hpp.js  _damageable_8hpp_source.html  _difficulty_8hpp.html  _difficulty_8hpp.js  _difficulty_8hpp_source.html  _dying_state_8hpp.html  _dying_state_8hpp.js  _dying_state_8hpp_source.html  _enemy_8hpp.html  _enemy_8hpp.js  _enemy_8hpp_source.html  _enemy_factory_8hpp.html  _enemy_factory_8hpp.js  _enemy_factory_8hpp_source.html  _enemy_state_8hpp.html  _enemy_state_8hpp.js  _enemy_state_8hpp_source.html  _entity_8hpp.html  _entity_8hpp_source.html  _entity_manager_8hpp_source.html  _entity_system_8hpp.html  _entity_system_8hpp_source.html  _game_object_8hpp.html  _game_object_8hpp.js  _game_object_8hpp_source.html  _group_info_8hpp_source.html  _health_8hpp.html  _health_8hpp_source.html  _input_manager_8hpp.html  _input_manager_8hpp.js  (+300 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_4.js  enums_5.js  (+51 more)
examples/: EntitySpriteExample.cpp  EntitySystemDemo.cpp  EntitySystemTest.cpp  TowerBuilderExample.cpp
include/: EntityManager.hpp  EntitySystem.hpp
include/Base/: Constants.h  Constants.hpp  GameObject.h  GameObject.hpp  Interactive.hpp
include/Core/: Application.hpp  InputManager.hpp  JSONLoader.hpp  KeyboardObserver.hpp  KeyboardState.hpp  LevelFactory.hpp  MouseObserver.hpp  MouseState.hpp  ResourceManager.hpp  RoundEvent.hpp  SceneManager.hpp  UserEvent.hpp  Window.hpp
include/Entity/: Cooldown.hpp  Damageable.hpp  Entity.hpp  Health.hpp
include/Entity/Enemy/: AttackingState.hpp  DyingState.hpp  Enemy.hpp  EnemyState.hpp  MovingState.hpp
include/Entity/Factory/: EnemyFactory.hpp  TowerFactory.hpp
include/Entity/Modules/: EntityPath.hpp  SpriteAnimation.hpp  Timer.hpp
include/Entity/Tower/: Projectile.hpp  TargetSelection.hpp  Tower.hpp  TowerBuilder.hpp  TowerFactory.hpp  TowerStat.hpp
include/Entity/Tower/Behaviors/: TowerBehavior.hpp
include/Entity/Tower/Behaviors/Combat/: FireMode.hpp  TargetSelector.hpp
include/Entity/Tower/Combat/: CombatTower.hpp  ContinuousTower.hpp  InstantTower.hpp  ProjectileTower.hpp  TargetSelection.hpp
include/Entity/Tower/Passive/: PassiveTower.hpp
include/Entity/Tower/Resource/: ResourceTower.hpp
include/GUIComponents/: ButtonBuilder.hpp  Style.hpp  button.hpp  cursor.hpp  mediator.hpp
include/Gameplay/: Currency.hpp  Difficulty.hpp  Map.hpp  Waypoint.hpp
include/Scene/: BlankScene.hpp  GroupInfo.hpp  Level.hpp  MainMenu.hpp  Scene.h  Scene.hpp  SceneManager.h  SceneManager.hpp  Setting.hpp
include/Scene/Mock/: TowerRotationMockScene.hpp
include/TestMockClasses/: SoundClickTrigger.hpp
include/Utility/: SignalMap.hpp  exception.hpp  lerp.hpp  logger.h  logger.hpp
src/: EntityManager.cpp  main.cpp
src/Core/: Application.cpp  InputManager.cpp  JSONLoader.cpp  KeyboardObserver.cpp  KeyboardState.cpp  LevelFactory.cpp  MainMenu.cpp  MouseObserver.cpp  MouseState.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  Setting.cpp  Window.cpp
src/Entity/: Damageable.cpp  Entity.cpp  Health.cpp
src/Entity/Enemy/: AttackingState.cpp  DyingState.cpp  Enemy.cpp  MovingState.cpp
src/Entity/Factory/: EnemyFactory.cpp  TowerFactory.cpp
src/Entity/Modules/: EntityPath.cpp  SpriteAnimation.cpp  Timer.cpp
src/Entity/Tower/: Projectile.cpp  TargetSelection.cpp  Tower.cpp  TowerBuilder.cpp
src/Entity/Tower/Behaviors/: TowerBehavior.cpp
src/Entity/Tower/Behaviors/Combat/: TargetSelector.cpp
src/Entity/Tower/Combat/: CombatTower.cpp  ContinuousTower.cpp  InstantTower.cpp  ProjectileTower.cpp  TargetSelection.cpp
src/Entity/Tower/Passive/: PassiveTower.cpp
src/Entity/Tower/Resource/: ResourceTower.cpp
src/GUIComponents/: ButtonBuilder.cpp  Style.cpp  button.cpp  cursor.cpp  mediator.cpp
src/Gameplay/: Currency.cpp  Map.cpp
src/Scene/: Level.cpp  MainMenu.cpp  Scene.cpp  SceneManager.cpp  Setting.cpp
src/Scene/Mock/: TowerRotationMockScene.cpp
src/TestMockClasses/: SoundClickTrigger.cpp
src/Utility/: SignalMap.cpp  lerp.cpp  logger.cpp
tests/Scene/: SceneSwitching.cc  SceneTest.cc
tests/mockClasses/: MainMenuMock.hpp
